[gd_scene load_steps=3 format=3 uid="uid://whq4xtv7pk31"]

[ext_resource type="Script" uid="uid://cwbgh6gd56row" path="res://interface/main_menu.gd" id="1_g8ogf"]

[sub_resource type="FontVariation" id="FontVariation_xxkca"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8ogf")

[node name="BackGroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ContainerInfo" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.5
offset_top = -40.0
offset_right = 77.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="TexInfo" type="Label" parent="ContainerInfo"]
layout_mode = 2
text = "Feito pelo"

[node name="ButtonInfo" type="Button" parent="ContainerInfo" groups=["button"]]
modulate = Color(0, 0.592157, 1, 1)
layout_mode = 2
focus_mode = 0
text = "Grupo 10"
flat = true

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -155.5
offset_right = 325.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameName" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Jogo Mui Loko
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="VContainer" type="VBoxContainer" parent="MainContainer/HContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="ButtonPlay" type="Button" parent="MainContainer/HContainer/VContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontVariation_xxkca")
text = "Jogar"
flat = true

[node name="ButtonControls" type="Button" parent="MainContainer/HContainer/VContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontVariation_xxkca")
text = "Controles
"
flat = true

[node name="ButtonQuit" type="Button" parent="MainContainer/HContainer/VContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("FontVariation_xxkca")
text = "Sair"
flat = true
